Checking transaction right after creating payment

--- a/lib/utrust_txpay_web/live/payments_live.html.leex
+++ b/lib/utrust_txpay_web/live/payments_live.html.leex
@@ -3,5 +3,5 @@
 </section>
 
 <section id="payments">
-  <%= live_component @socket, PaymentsListComponent, id: :list, payments: @payments %>
+  <%= live_component @socket, PaymentsListComponent, id: :list, payments: @payments, checking: @checking %>
 </section>
