--- a/lib/utrust_txpay_web/live/payments_live.html.leex
+++ b/lib/utrust_txpay_web/live/payments_live.html.leex
@@ -1,7 +1,13 @@
-<section id="new-payment">
-  <%= live_component @socket, FormComponent, id: :form, changeset: @changeset %>
-</section>
+<main class="h-screen m-auto md:w-10/12 lg:w-8/12 xl:w-6/12 2xl:w-5/12 space-y-8">
+  <div id="header" class="flex justify-center">
+    <h1><span>Utrust Txpay</span></h1>
+  </div>
 
-<section id="payments">
-  <%= live_component @socket, PaymentsListComponent, id: :list, payments: @payments, checking: @checking %>
-</section>
+  <section id="new-payment" class="flex w-full">
+    <%= live_component @socket, FormComponent, id: :form, changeset: @changeset %>
+  </section>
+
+  <section id="payments" class="flex w-full">
+    <%= live_component @socket, PaymentsListComponent, id: :list, payments: @payments, checking: @checking %>
+  </section>
+</main>
